--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>HTML Education Template</title>
+		<title>Energy Visualization</title>
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Lato:700%7CMontserrat:400,600" rel="stylesheet">
@@ -27,24 +27,20 @@
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
+		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
+		<script src="https://d3js.org/queue.v1.min.js"></script>
+		<script src="https://d3js.org/topojson.v1.min.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script src="https://d3js.org/d3-color.v1.min.js"></script>
+		<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
-  <script src="https://d3js.org/queue.v1.min.js"></script>
-  <script src="https://d3js.org/topojson.v1.min.js"></script>
+		<script src="https://d3js.org/d3.v5.min.js"></script>
 
-  <script src="https://d3js.org/d3-color.v1.min.js"></script>
-  <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="energy.css"/>
 
-<script src="https://d3js.org/d3.v5.min.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="energy.css"/>
-
-
-
-    </head>
+  </head>
 
 	<body>
 
