auto compleete off

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -99,7 +99,7 @@
 			<input id="yearslider" type="range" min="1990" max="2017" step="1" value = "1990"> Slide to change year</input>
 			<a href = "#slider" style="position:absolute;top:275px;left:30px;font-size:15px;text-decoration:underline"> Jump to Map >></a>
 			<!-- Search Bar -->
-      <input type="text" id = "searchText" placeholder="Look up a country" name="search" ><br/>
+      <input autocomplete="off" type="text" id = "searchText" placeholder="Look up a country" name="search" ><br/>
       <button type="submit" id = "searchSubmit">Zoom In     <i class="fa fa-search"></i></button>
 			<p id="searchErr" style="visibility: hidden">Country not available or does not exist</p>
 			<!-- Compare -->
