Added new web-tab, debate

--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -19,8 +19,6 @@
 
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="../css/style.css"/>
-		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="SeaLevelSunburst.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,21 +26,6 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-
-
-
-		<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
-		<script src="https://d3js.org/d3.v4.min.js"></script>
-		<script src="https://d3js.org/queue.v1.min.js"></script>
-		<script src="https://d3js.org/topojson.v1.min.js"></script>
-
-		<script src="https://d3js.org/d3-color.v1.min.js"></script>
-		<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-		<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-		<script type="text/javascript" src="textfield.js"></script>
-		  <link rel="stylesheet" type="text/css" href="co2ScatterPlot.css" />
-
 
     </head>
 
@@ -72,8 +55,8 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../debate/debate.html">The Debate</a></li>
+						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
 						<li><a href="../seaLevel/seaLevel.html">Sea Level</a></li>
@@ -85,43 +68,33 @@
 		</header>
 		<!-- /Header -->
 
-	<h1>Annual Sea Level Rise (mm/year)</h1>
- 	<p class="white-text">As temperature increase and heat up Earth's atmosphere, sea levels also increase. - </p>
-
- 	<!-- <script src="seaLevelSunburst.js"></script> -->
-
-
-		<script src="d3-tip.js"></script>
-
-	  <div id="slider"></div>
-
-	  <!-- @Alex -->
-	  <!-- Change the .js file and it should display on the website! -->
-	  <script type="text/javascript" src="SeaLevelSunburst.js"></script>
-
   <div class="Look-At-This-Shit">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-20">
-				<h1 class="black-text">Glacial Melting</h1>
-				<p class="white-text">The melting of land glaciers is one of the two main causes of sea level rise. As the glaciers melt, their water drips off into the ocean, adding more volume. Areas with the biggest concern of glacial melting include Antarctica and Greenland, as they host many of the worlds land glaciers. The figure below includes records of how glaciers on Antarctica have changed since 1979.</p>
-			</div>
-		</div>
-	</div>
-	</div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-20">
+        <h1 class="black-text">Defining Climate Change & the debate</h1>
+        <p class="white-text">Climate change is a global phenonena encapsulating changes in various weather patterns such as temperature, rainfall, sea level, and storm frequency.</p>
+				<p class="white-text">The debate surrounding the legitamacy of climate change does not challenge if climate change is occuring or not, but whether or not humans are the causal affect of such a phenonena. </p>
 
-	 <div id="slider"></div>
-	 <script type="text/javascript" src="beeSwarmGlaciers.js"></script>
+				<h1 class="black-text">Evidence Humans are the Cause</h1>
+				<p class="white-text">Carbon Dioxide Emmisions as a Greenhouse Gas </p>
+				<p class="white-text">Accelerated Temperature Rise</p>
+				<p class="white-text">Unanimous</i>agreement from scientists</p>
 
-	 <div class="Look-At-This-Shit">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-20">
-				<p class="white-text">The melting of land glaciers is one of the two main causes of sea level rise. As the glaciers melt, their water drips off into the ocean, adding more volume. Areas with the biggest concern of glacial melting include Antarctica and Greenland, as they host many of the worlds land glaciers. The figure below includes records of how glaciers on Antarctica have changed since 1979.</p>
-			</div>
-		</div>
-	</div>
-	</div>
+
+				<h1 class="black-text">Evidence Humans are <b>not</b> the Cause</h1>
+				<p class="white-text">Global Warming is not True</p>
+				<p class="white-text">Earth's on a Naturally Warming Period</p>
+				<p class="white-text">Man-made Carbon Dioxide Production is a non-factor</p>
+
+				<h1 class="black-text">The Breakdown</h1>
+				<p class="white-text">Here at ViCC, we will breakdown arguements from both sides using data visualizations as a medium to inspect the legitamacy of said arguements.</p>
+				<p class="white-text">Each of our webpage tabs encompases a specific topic of climate change. Through data-visualization, we hope user's walk away with a more fair understanding on the evidence of climate change</p>
+
+      </div>
+    </div>
+  </div>
+  </div>
 
 		<!-- Footer -->
 		<footer id="footer" class="section">
