--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -72,6 +72,7 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right">
 						<li><a href="../index.html">Home</a></li>
+						<li><a href="../debate/debate.html">The Debate</a></li>
 						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
@@ -325,17 +326,17 @@
                    is forecasted to have 9% less water at 1.5°C and 18% less water at 2°C. Since the ocean holds so much heat, sea levels will rise due to ice sheets and glaciers being
                     heated from above and under from the increase in ocean temperatures. <br> <br>
 
-                    &emsp;&emsp; At 1.5°C, the production of wheat goes down 9% and corn production goes down 3%. At 2°C, the production of wheat goes down 16% and corn production goes down 
-                6%. Although the production of soy and rice goes up 6% at 1.5°C and 2°C, if you get high temperatures or very dry conditions during the development of crops, it produces essentially 
-                no grain. At certain temperature thresholds, corn doesn't die but it also doesn't grow any seeds which defeats the purpose of growing corn. The benefits of 
-                 fertilization with more carbon dioxide is offsetted by the fact that plant will still die from the temperature and dry conditions. A plant growing 
+                    &emsp;&emsp; At 1.5°C, the production of wheat goes down 9% and corn production goes down 3%. At 2°C, the production of wheat goes down 16% and corn production goes down
+                6%. Although the production of soy and rice goes up 6% at 1.5°C and 2°C, if you get high temperatures or very dry conditions during the development of crops, it produces essentially
+                no grain. At certain temperature thresholds, corn doesn't die but it also doesn't grow any seeds which defeats the purpose of growing corn. The benefits of
+                 fertilization with more carbon dioxide is offsetted by the fact that plant will still die from the temperature and dry conditions. A plant growing
                  really fast when it died is still a dead plant. There is no benefits for crops with an increase in temperature. <br> <br>
 
-                 &emsp; &emsp;Faced with this reality, we must understand where to go from this. We should try our best to limit this half degree growth, however we must be very 
-                 careful since we have little experience with limiting glboal warming with precision. If we try to limit growth to 1.5°C, it may end up being 2°C or 2°C may 
-                 end up being 3°C. If we were to exceed this 1.5°C limit and then brought the temperature back down, there is no guarantee that the consequences of crossing 
-                 this limit would be reversed. 
-                                
+                 &emsp; &emsp;Faced with this reality, we must understand where to go from this. We should try our best to limit this half degree growth, however we must be very
+                 careful since we have little experience with limiting glboal warming with precision. If we try to limit growth to 1.5°C, it may end up being 2°C or 2°C may
+                 end up being 3°C. If we were to exceed this 1.5°C limit and then brought the temperature back down, there is no guarantee that the consequences of crossing
+                 this limit would be reversed.
+
                 </p>
 		</div>
 	</div>
