--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,8 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a class="logo" href="index.html">
-							<img src="./img/logo-alt.png" alt="logo">
+							<img src="./img/logo.png" alt="logo">
+
 						</a>
 					</div>
 					<!-- /Logo -->
@@ -54,6 +55,7 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="../debate/debate.html">The Debate</a></li>
 						<li><a href="co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="temperature/temperature.html">Temperature</a></li>
 						<li><a href="energy/energy.html">Energy</a></li>
@@ -78,8 +80,8 @@
 					<div class="row">
 						<div class="col-md-8">
 							<h1 class="white-text">Visualizing Climate Change</h1>
-							<p class="lead white-text">Learn about the past, present, and future of climate change via interactive visualizations</p>
-							<a class="main-button icon-button" href="#">Is climate change real?</a>
+							<p class="lead white-text">Explore the past, present, and future of climate change using interactive data visualizations</p>
+							<a class="main-button icon-button" href="debate/debate.html">Is climate change real?</a>
 						</div>
 					</div>
 				</div>
@@ -96,16 +98,6 @@
 
 				<!-- row -->
 				<div class="row">
-
-					<!-- footer logo -->
-					<div class="col-md-6">
-						<div class="footer-logo">
-							<a class="logo" href="index.html">
-								<img src="./img/logo.png" alt="logo">
-							</a>
-						</div>
-					</div>
-					<!-- footer logo -->
 
 				</div>
 				<!-- /row -->
