--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -170,8 +170,8 @@
 		<!-- https://www.e-education.psu.edu/earth104/node/1347 -->
 		<img src="./energyImg/altEnergy2.jpg"width=45%> 
 		<!-- https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report -->
-		<p>Source: https://www.e-education.psu.edu/earth104/node/1347</p>
-		<p>Source: https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report</p>
+		<p>Source: <a href="https://www.e-education.psu.edu/earth104/node/1347" target="_blank">https://www.e-education.psu.edu/earth104/node/1347</a></p>
+		<p>Source: <a href="https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report" target="_blank">https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report</a></p>
 	</div>
 		<!-- Footer -->
 		<footer id="footer" class="section">
