Fixing text tracking

--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -19,6 +19,7 @@
 
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="../css/style.css"/>
+		<link type="text/css" rel="stylesheet" href="debate.css"/>
 
 		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -68,6 +69,11 @@
 		</header>
 		<!-- /Header -->
 
+		<div class="Look-At-This-Shit">
+
+
+
+
   <div class="Look-At-This-Shit">
   <div class="container">
     <div class="row">
@@ -76,25 +82,32 @@
         <p class="white-text">Climate change is a global phenonena encapsulating changes in various weather patterns such as temperature, rainfall, sea level, and storm frequency.</p>
 				<p class="white-text">The debate surrounding the legitamacy of climate change does not challenge if climate change is occuring or not, but whether or not humans are the causal affect of such a phenonena. </p>
 
-				<h1 class="black-text">Evidence Humans are the Cause</h1>
-				<p class="white-text">Carbon Dioxide Emmisions as a Greenhouse Gas </p>
-				<p class="white-text">Accelerated Temperature Rise</p>
-				<p class="white-text">Unanimous</i>agreement from scientists</p>
-
-
-				<h1 class="black-text">Evidence Humans are <b>not</b> the Cause</h1>
-				<p class="white-text">Global Warming is not True</p>
-				<p class="white-text">Earth's on a Naturally Warming Period</p>
-				<p class="white-text">Man-made Carbon Dioxide Production is a non-factor</p>
-
-				<h1 class="black-text">The Breakdown</h1>
-				<p class="white-text">Here at ViCC, we will breakdown arguements from both sides using data visualizations as a medium to inspect the legitamacy of said arguements.</p>
-				<p class="white-text">Each of our webpage tabs encompases a specific topic of climate change. Through data-visualization, we hope user's walk away with a more fair understanding on the evidence of climate change</p>
-
       </div>
     </div>
   </div>
   </div>
+
+	<div class="container">
+    <div class="row">
+			<div class="left">
+				<h1 class="black-text">Evidence Humans are the Cause</h1>
+				<p class="white-text">Carbon Dioxide Emmisions as a Greenhouse Gas </p>
+				<p class="white-text">Accelerated Temperature Rise</p>
+				<p class="white-text">Unanimous</i>agreement from scientists</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+    <div class="row">
+			<div class="right">
+				<h1 class="black-text">Evidence Humans are <b>not</b> the Cause</h1>
+				<p class="white-text">Global Warming is not True</p>
+				<p class="white-text">Earth's on a Naturally Warming Period</p>
+				<p class="white-text">Man-made Carbon Dioxide Production is a non-factor</p>
+			</div>
+		</div>
+	</div>
 
 		<!-- Footer -->
 		<footer id="footer" class="section">
@@ -131,7 +144,6 @@
 		<!-- preloader -->
 		<div id='preloader'><div class='preloader'></div></div>
 		<!-- /preloader -->
-
 
 		<!-- jQuery Plugins -->
 		<script type="text/javascript" src="../js/jquery.min.js"></script>
