--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 					<!-- Logo -->
 					<div class="navbar-brand">
 						<a class="logo" href="index.html">
-							<img src="./img/logo.png" alt="logo">
+						<!--<img src="./img/logo.png" alt="logo">-->
 
 						</a>
 					</div>
