--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -168,7 +168,7 @@
 	<div>
 		<img src= "./energyImg/altEnergy.png" height=500px >
 		<!-- https://www.e-education.psu.edu/earth104/node/1347 -->
-		<img src="./energyImg/altEnergy2.jpg"width=40.4%> 
+		<img src="./energyImg/altEnergy2.jpg"width=613px> 
 		<!-- https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report -->
 		<p>Source: <a href="https://www.e-education.psu.edu/earth104/node/1347" target="_blank">https://www.e-education.psu.edu/earth104/node/1347</a></p>
 		<p>Source: <a href="https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report" target="_blank">https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report</a></p>
