--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -322,6 +322,15 @@
                  the polar ice caps will cause a sea level rise which affects small islands the most. The coral reefs won't be able to protect the marine
                   animals and humans that rely on the reefs for protection.
                   <br></br>
+                                </p> 
+        <div id="imageText">
+          <p class="initialText"> For example you can see a dramatic spike in temperature from the years 1960 to 1964. The temperature kept drastically increasing each year 
+              with an increase of 9°C from 1963 to 1964.
+          </p>
+
+        </div>
+       <br>
+       <p class="white-text" align="left" >
                   &emsp;&emsp; At 1.5°C, coral reefs have a chance at adapting and recovering, however at 2°C, the chance of recovering disappears. The Mediterranean
                    is forecasted to have 9% less water at 1.5°C and 18% less water at 2°C. Since the ocean holds so much heat, sea levels will rise due to ice sheets and glaciers being
                     heated from above and under from the increase in ocean temperatures. <br> <br>
@@ -338,6 +347,13 @@
                  this limit would be reversed.
 
                 </p>
+                <div id="imageText">
+                        <p class="initialText"> 
+                            If you compare the temperature of 1904 Afghanistan with 2014 Afghanistan, you will notice how far we have pushed our limits. With each month consistently 
+                        exceeding an increase of 1°C to 2°C. 
+                        </p>
+              
+                      </div>
 		</div>
 	</div>
 </div>
