added text and fixed not loading issue

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -92,7 +92,7 @@
 
   <h2 id = "yeartxt">Year: 1990</h2>
 
-  <svg id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
+  <svg xmlns="http://www.w3.org/2000/svg" id="partitionSVG" width="1400" height="1400" style ="position:relative; left:0%;">
     <foreignObject width="1400" height="1400">
 			<h1>Global Energy Consumption(Mtoe)</h1>
 			<p><b>HOW TO USE :</b> Hover over the visualization to view stats in the middle. CLICK a section to zoom and view more	</p>
@@ -144,7 +144,14 @@
 		<div class="row">
 			<div class="col-md-20">
 				<h1 class="black-text">Visualizing Climate Change</h1>
-				<p class="white-text">What can we learn about all of this? You can change the width section by adjusting the col-MD value above. This fixes our stupid ass implementations. Words words words words words words words words words words words words words words words words words words words words </p>
+				<p class="white-text">
+					<!-- What can we learn about all of this? You can change the width section by adjusting the col-MD value above. This fixes our stupid ass implementations. Words words words words words words words words words words words words words words words words words words words words  -->
+					It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
+    used every year. These energy include coals, natuarl gas, and oil. However, there are energy and resources that a non-renewable. Meaning
+    if we keep producing and consuming resources and energy, the world will eventually run out. We need to know how to minimize our energy usage
+    not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This
+    visualization tells us story of how if we keep using energy like this. Climate change will accelerate.
+				</p>
 			</div>
 		</div>
 	</div>
@@ -157,12 +164,12 @@
 	<script type="text/javascript" src="energyChoro.js"></script>
 	<script type="text/javascript" src="energyChoroHelper.js"></script>
 
-  <p id="shortDescription">It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
+  <!-- <p id="shortDescription">It is important to know how the use of energy can impact climate change. As we can see in this sunburst, more and more energy is being
     used every year. These energy include coals, natuarl gas, and oil. However, there are energy and resources that a non-renewable. Meaning
     if we keep producing and consuming resources and energy, the world will eventually run out. We need to know how to minimize our energy usage
     not only for the world, but for the climate as well. Fossil fuels for example generate a lot of CO2 that is a factor to global warming. This
     visualization tells us story of how if we keep using energy like this. Climate change will accelerate.
-  </p>
+  </p> -->
 	<p>Source:<a href="https://yearbook.enerdata.net/" target="_blank">https://yearbook.enerdata.net/</a></p><br/>
 	<p>Alternative visualizations to help understand</p>>
 	<div>
