Created contact page

--- a/src/co2/co2.html
+++ b/src/co2/co2.html
@@ -109,7 +109,7 @@
       <p class="white-text">Unless our current linear trajectory changes, our CO2 levels are guaranteed to hit this 1 trillion ton threshold sometime between 2050 and 2055.</p>
     </div>
 
-  
+
 				<div class="chart-example" id="chart">
     <svg id="mainChart">
       <div id="buttonsArea"> </div>
@@ -123,8 +123,11 @@
 	<script type="text/javascript" src="co2RadioButtons.js"></script>
 
 	<div id="slider"></div>
+	<div id="choroInputBox"></div>
 	<script type="text/javascript" src="co2ChoroInit.js"></script>
 	<script type="text/javascript" src="co2ChoroSlider.js"></script>
+	<script type="text/javascript" src="co2ChoroInputBox.js"></script>
+
 	<script type="text/javascript" src="co2ChoroButtons.js"></script>
 	<script type="text/javascript" src="co2Choro.js"></script>
   <script type="text/javascript" src="co2ChoroHelper.js"></script>
