--- a/src/temperature/temperature.html
+++ b/src/temperature/temperature.html
@@ -85,14 +85,6 @@
 		</header>
 		<!-- /Header -->
 
-<div id="insns">
-	<!--
-    <p id="sources">
-        Source:<a href="https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/" target="_blank">https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/</a><br/>
-    </p>-->
-
-
-</div>
 <svg id="pSVG" width="1250" height="650" style ="position:relative">
     <foreignObject width="1250" height="650">
 
@@ -322,9 +314,9 @@
                  the polar ice caps will cause a sea level rise which affects small islands the most. The coral reefs won't be able to protect the marine
                   animals and humans that rely on the reefs for protection.
                   <br></br>
-                                </p> 
+                                </p>
         <div id="imageText">
-          <p class="initialText"> For example you can see a dramatic spike in temperature from the years 1960 to 1964. The temperature kept drastically increasing each year 
+          <p class="initialText"> For example you can see a dramatic spike in temperature from the years 1960 to 1964. The temperature kept drastically increasing each year
               with an increase of 9°C from 1963 to 1964.
           </p>
 
@@ -348,11 +340,11 @@
 
                 </p>
                 <div id="imageText">
-                        <p class="initialText"> 
-                            If you compare the temperature of 1904 Afghanistan with 2014 Afghanistan, you will notice how far we have pushed our limits. With each month consistently 
-                        exceeding an increase of 1°C to 2°C. 
+                        <p class="initialText">
+                            If you compare the temperature of 1904 Afghanistan with 2014 Afghanistan, you will notice how far we have pushed our limits. With each month consistently
+                        exceeding an increase of 1°C to 2°C.
                         </p>
-              
+
                       </div>
 		</div>
 	</div>
@@ -380,7 +372,11 @@
 
 				<!-- row -->
 				<div id="bottom-footer" class="row">
+					<div id="insns">
 
+					        Source:<a class="white-text" href="https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/" target="_blank">https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_3.23/crucy.1506241137.v3.23/countries/tmp/</a><br/>
+
+					</div>
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
