Added contact page to all HTML pages

--- a/src/contact.html
+++ b/src/contact.html
@@ -69,20 +69,16 @@
 		<!-- /Header -->
 
 		<!-- Hero-area -->
-		<div class="hero-area section">
+		<div class="hero-area">
 
 			<!-- Backgound Image -->
-			<div class="bg-image bg-parallax overlay" style="background-image:url(./img/page-background.jpg)"></div>
+			<div class="bg-image bg-parallax overlay" style="background-image:url(./img/contact-hero.png)"></div>
 			<!-- /Backgound Image -->
 
 			<div class="container">
 				<div class="row">
 					<div class="col-md-10 col-md-offset-1 text-center">
-						<ul class="hero-area-tree">
-							<li><a href="index.html">Home</a></li>
-							<li>Contact</li>
-						</ul>
-						<h1 class="white-text">Get In Touch</h1>
+						<h1 class="white-text">Tell Us What You Think</h1>
 
 					</div>
 				</div>
@@ -103,8 +99,7 @@
 					<!-- contact form -->
 					<div class="col-md-6">
 						<div class="contact-form">
-							<h4>Send A Message</h4>
-							<p class="white-text">Send us a message of what you think about the website!</p>
+							<h4>Send A Message!</h4>
 							<form action="mailto:data.vizualsucsc@gmail.com" method="post" enctype="text/plain">
 								<input class="input" type="text" name="name" placeholder="Name">
 								<input class="input" type="email" name="email" placeholder="Your Email">
@@ -127,7 +122,6 @@
 								<li><i class="fa fa-envelope"></i>CO2 Bubble: dakriege@ucsc.edu</li>
 								<li><i class="fa fa-envelope"></i>Temperature Bar: dakriege@ucsc.edu</li>
 								<li><i class="fa fa-envelope"></i>Energy Sunburst: dakriege@ucsc.edu</li>
-
 							</ul>
 				    </div>
 						<p
