--- a/src/debate/debate.html
+++ b/src/debate/debate.html
@@ -61,6 +61,7 @@
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
 						<li><a href="../seaLevel/seaLevel.html">Sea Level</a></li>
+						<li><a href="../contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<!-- /Navigation -->
