--- a/src/seaLevel/seaLevel.html
+++ b/src/seaLevel/seaLevel.html
@@ -72,11 +72,12 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right">
 						<li><a href="../index.html">Home</a></li>
-						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../debate/debate.html">The Debate</a></li>
+						<li><a href="../co2/co2.html">Carbon Dioxide</a></li>
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
 						<li><a href="../seaLevel/seaLevel.html">Sea Level</a></li>
+						<li><a href="../contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<!-- /Navigation -->
