--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -73,6 +73,7 @@
 						<li><a href="../temperature/temperature.html">Temperature</a></li>
 						<li><a href="../energy/energy.html">Energy</a></li>
 						<li><a href="../seaLevel/seaLevel.html">Sea Level</a></li>
+						<li><a href="../contact.html">Contact</a></li>
 					</ul>
 				</nav>
 				<!-- /Navigation -->
@@ -175,7 +176,7 @@
 	<div>
 		<img src= "./energyImg/altEnergy.png" height=500px >
 		<!-- https://www.e-education.psu.edu/earth104/node/1347 -->
-		<img src="./energyImg/altEnergy2.jpg"width=613px> 
+		<img src="./energyImg/altEnergy2.jpg"width=613px>
 		<!-- https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report -->
 		<p>Source: <a href="https://www.e-education.psu.edu/earth104/node/1347" target="_blank">https://www.e-education.psu.edu/earth104/node/1347</a></p>
 		<p>Source: <a href="https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report" target="_blank">https://seekingalpha.com/article/4083393-world-energy-2017minus-2050-annual-report</a></p>
