--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -108,8 +108,8 @@
       <button id = "compare">COMPARE</button>
 			<button id = "isolate">ISOLATE</button>
 			<div class = "compareTxt">
-				<input autocomplete="off" type="number" placeholder="Year 1" name="search" > TO </input>
-				<input autocomplete="off" type="number" placeholder="Year 2" name="search" ></input>
+				<input id = "year1" autocomplete="off" type="number" placeholder="Year 1" name="search" > TO </input>
+				<input id = "year2" autocomplete="off" type="number" placeholder="Year 2" name="search" ></input>
 			</div>
 			<!-- Table -->
       <table id = "burstTable">
