fixed compare function

--- a/src/energy/energy.html
+++ b/src/energy/energy.html
@@ -123,15 +123,20 @@
         <tbody></tbody>
 			</table>
 			<!-- Text -->
-			<div class = "storytxt">
-				<p> This Sunburst is a unique way to display different types of energy usage (consumption, natural gas, etc.).</p>
-				<p> To begin, you can see energy usages of different countries/continents/groups.</p>
-				<p> Click on a section you are interested in (United States) or look it up to zoom in for more info about its energy usage.</p>
-				<p> As you slide through the years, you can see that certain parts (Asia) are increasingly moving up in energy usage</p>
-				<p> The table on the right shows an overview of the data presented and can help understand that energy usage is climbing for certain countries and over the years</p>
-				<p>To view other energy statistics, select a new file</p>
-				<p> Click on Jump to Map to view map representation</p>
-			</div>
+		<div class = "storytxt">
+			<p> This Sunburst is a unique way to display different types of energy usage (consumption, natural gas, etc.).</p>
+			<p> To begin, you can see energy usages of different countries/continents/groups.</p>
+			<p> Click on a section you are interested in (United States) or look it up to zoom in for more info about its energy usage.</p>
+			<p> As you slide through the years, you can see that certain parts (Asia) are increasingly moving up in energy usage</p>
+			<p> The table on the right shows an overview of the data presented and can help understand that energy usage is climbing for certain countries and over the years</p>
+			<p>To view other energy statistics, select a new file</p>
+			<p> Click on Jump to Map to view map representation</p>
+		</div>
+		<!-- <div>
+			<span>What is a Sunburst?</span>
+			<span>It is a hierarchy of data displayed with each ring of the circle as a level of the hierarchy. The innermost ring is the top of the hierarchy while the outermost is at the bottom </span>
+			<span> In this case, the inner ring represents each country while the outer ring represents the resources consumption in that country</span>
+		</div> -->
     </foreignObject>
   </svg>
 
